# rust-file-server

./: .gitignore  Cargo.toml
db/sql/: 100_users.sql  110_users_sessions.sql  200_email_verification.sql  300_fs_items.sql  350_event_listeners.sql  testing.sql
lib/: Cargo.toml
lib/src/: lib.rs  snowflake.rs  string.rs  time.rs  units.rs
otp/: Cargo.toml
otp/src/: lib.rs
scripts/: package-lock.json  package.json  test_listener_server.js
src/: error.rs  event.rs  main.rs  snowflakes.rs  state.rs  watcher.rs
src/components/: auth.rs  fs_items.rs  html.rs  mod.rs  path.rs  request_wrappers.rs
src/config/: error.rs  mod.rs  shape.rs
src/db/: error.rs  mod.rs  query.rs  shared_state.rs  types.rs
src/db/record/: event_listeners.rs  fs_items.rs  mod.rs  user_sessions.rs  users.rs
src/http/: body.rs  cookie.rs  error.rs  header.rs  mime.rs  mod.rs  response.rs  types.rs  uri.rs
src/request/: uri.rs
src/router/: mod.rs
src/router/handle/fs/: mod.rs
src/routing/: endpoint.rs  mod.rs  params.rs  router.rs
src/routing/handle/: _static_.rs  fs.rs  listeners.rs  mod.rs  ping.rs  sync.rs
src/routing/handle/admin/: users.rs
src/routing/handle/auth/: password.rs  session.rs
src/routing/handle/auth/session/: check.rs  mod.rs  session_id.rs
src/routing/handle/fs/: delete.rs  get.rs  mod.rs  post.rs  put.rs
src/routing/handle/session/: mod.rs  session_id.rs
src/routing/handle/users/: mod.rs
src/routing/layer/: error.rs  log.rs  mod.rs  state.rs
src/routing/service/: endpoint.rs  mod.rs  not_found.rs  router.rs
src/security/: argon.rs  error.rs  jwt.rs  mod.rs  rand.rs
src/storage/: mod.rs  shared_state.rs
src/string/: mod.rs
src/template/: helpers.rs  mod.rs  shared_state.rs
templates/: index.hbs
templates/page/: directory.hbs  file.hbs
