[package]
name = "image-server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["lib"]

[dependencies]
lib = { path = "./lib" }

shape-rs = { git = "https://github.com/dac098/shape-rs" }

futures = { version = "0.3" }
regex = { version = "1.5" }
lazy_static = { version = "1.4" }
num_cpus = { version = "1.0" }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
urlencoding = { version = "2.1.0" }

serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
serde_yaml = { version = "0.8" }
serde_repr = { version = "0.1" }

# server
hyper = { version = "0.14.13", features = ["full"] }
tokio = { version = "1.12.0", features = ["full"] }
tokio-util = { version = "0.6", features = ["codec"] }
tower = { version = "0.4.9"}
mime = { version = "0.3" }
tokio-tar = { version = "0.3.0" }

# auth items
ring = { version = "0.16.20" }
jsonwebtoken = { version = "7" }
rust-argon2 = { version = "0.8" }

handlebars = { version = "4.1.4" }

tokio-postgres = { version = "0.7", features = ["with-serde_json-1", "with-chrono-0_4", "with-uuid-0_8"] }
bb8 = { version = "0.7" }
bb8-postgres = { version = "0.7" }

notify = { version = "5.0.0-pre.13", features = ["serde"]}